// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should render correctly 1`] = `
<Tabs__StyledTabs
  absolute={false}
  block={false}
>
  <[object Object]
    value="m"
  >
    <Tabs.Tab
      active={true}
      disabled={false}
      size="m"
    >
      Tab 1
    </Tabs.Tab>
    <Tabs.Tab
      active={false}
      disabled={true}
      size="m"
    >
      Tab 2
    </Tabs.Tab>
    <Tabs.Tab
      active={false}
      disabled={false}
      size="m"
    >
      Tab 3
    </Tabs.Tab>
  </[object Object]>
</Tabs__StyledTabs>
`;

exports[`Tabs should render with props absolute 1`] = `
<Tabs__StyledTabs
  absolute={true}
  block={false}
>
  <[object Object]
    value="m"
  >
    <Tabs.Tab
      active={true}
      disabled={false}
      size="m"
    >
      Tab 1
    </Tabs.Tab>
    <Tabs.Tab
      active={false}
      disabled={true}
      size="m"
    >
      Tab 2
    </Tabs.Tab>
    <Tabs.Tab
      active={false}
      disabled={false}
      size="m"
    >
      Tab 3
    </Tabs.Tab>
  </[object Object]>
</Tabs__StyledTabs>
`;

exports[`Tabs should render with props pills 1`] = `
<Tabs__StyledTabs
  absolute={false}
  block={false}
  pills={true}
>
  <[object Object]
    value="m"
  >
    <Tabs.Tab
      active={true}
      disabled={false}
      size="m"
    >
      Tab 1
    </Tabs.Tab>
    <Tabs.Tab
      active={false}
      disabled={true}
      size="m"
    >
      Tab 2
    </Tabs.Tab>
    <Tabs.Tab
      active={false}
      disabled={false}
      size="m"
    >
      Tab 3
    </Tabs.Tab>
  </[object Object]>
</Tabs__StyledTabs>
`;
